--- a/my-app/src/App.module.css
+++ b/my-app/src/App.module.css
@@ -17,7 +17,6 @@
 	width: 200px;
 	padding: 8px 8px 20px 8px;
 	margin: 20px auto;
-	/* background-color: #61dafb; */
 	background-color: #ababab;
 	border-radius: 4px;
 	border-top: 2px solid #fff;
@@ -44,16 +43,19 @@
 	text-align: right;
 	font-weight: 400;
 }
-.button {
-display: inline-block;
-margin: 2px;
-width: 42px;
-height: 42px;
-font-size: 16px;
-font-weight: bold;
-border-radius: 4px;
+.result{
+	color: #fff;
 }
-.math {
+.button {
+	display: inline-block;
+	margin: 2px;
+	width: 42px;
+	height: 42px;
+	font-size: 16px;
+	font-weight: bold;
+	border-radius: 4px;
+}
+.math, .total {
 	margin: 2px 2px 6px 2px;
 	color: #fff;
 	text-shadow: -1px -1px 0px #44006f;
@@ -83,16 +85,6 @@ border-radius: 4px;
 	border-right: 2px solid #FF8484;
 	border-bottom: 2px solid #800000;
 	border-left: 2px solid #800000;
+	border-radius: 4px;
 	box-shadow: 0px 0px 2px #030303, inset 0px -20px 1px #B00000;
 }
-/* .digit : hover,
-.mathButtons: hover,
-.clear: hover
-{
-	background-color: #FFBA75;
-	box-shadow: 0px 0px 2px #FFBA75, inset 0px -20px 1px #FF8000;
-	border-top: 2px solid #FFF;
-	border-right: 2px solid #FFF;
-	border-bottom: 2px solid #AE5700;
-	border-left: 2px solid #AE5700;
-} */
